name:                Bowling
version:             0.1.0.0
synopsis:            Ten-Pin bowling scorecard API
description:         Please see README.md
homepage:            https://github.com/rgould1/Bowling#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Gould
maintainer:          richardkgould@gmail.com
copyright:           2016 Richard Gould
category:            API
build-type:          Simple
cabal-version:       >=1.10

executable Bowling
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl>=2.2.1
